--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
 
 /* footer color rgba(255, 255, 255, 0.6); */
 
+/* border clients color #AFB1B8 */
+
+/* social footer color rgba(255, 255, 255, 1) */
+
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -19,6 +23,8 @@
   --footer-color: rgba(255, 255, 255, 0.6);
   --footer-background-color: #2f303a;
   --border-color: #ececec;
+  --clients-border: #afb1b8;
+  --social-footer-color: rgba(255, 255, 255, 1);
 }
 
 body {
@@ -28,7 +34,7 @@ body {
 }
 
 header {
-  border-bottom: 1px solid;
+  border-bottom: 0.5px solid;
   color: var(--border-color);
 }
 
@@ -125,7 +131,7 @@ ul {
 }
 
 .contacts.list .item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .contacts .link {
@@ -135,6 +141,21 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+}
+
+.envelope-icon {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.smartphone-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
+  vertical-align: top;
 }
 
 .contacts .link:hover,
@@ -159,17 +180,27 @@ ul {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  height: 600px;
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: var(--footer-background-color);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-img-2.jpg);
 }
 
 .hero-title {
-  color: var(--title-text-color);
+  color: var(--primary-background-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .hero-button {
@@ -180,10 +211,15 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   display: inline-block;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
   align-items: center;
   letter-spacing: 0.06em;
   cursor: pointer;
   padding: 10px 32px 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 /* What do we do */
@@ -221,6 +257,32 @@ ul {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+}
+
+.feature-list .item::before {
+  display: block;
+  content: "";
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+
+  background-color: var(--secondary-background-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px;
+}
+
+.feature-list .item:nth-child(1)::before {
+  background-image: url(../images/icon/antenna.svg);
+}
+.feature-list .item:nth-child(2)::before {
+  background-image: url(../images/icon/clock.svg);
+}
+.feature-list .item:nth-child(3)::before {
+  background-image: url(../images/icon/diagram.svg);
+}
+.feature-list .item:nth-child(4)::before {
+  background-image: url(../images/icon/astronaut.svg);
 }
 
 .feature-list .item {
@@ -286,6 +348,9 @@ ul {
 
 .staff .item {
   margin-right: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .staff .item:nth-child(4n) {
   margin-right: 0;
@@ -300,6 +365,49 @@ ul {
 .section.team {
   background-color: var(--secondary-background-color);
 }
+
+/* Clients */
+
+.section-title.clients {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.clients-logo {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  margin-right: 30px;
+  fill: var(--clients-border);
+  cursor: pointer;
+}
+
+.clients-logo:hover,
+.clients-logo:focus {
+  fill: var(--accent);
+  border: 1px solid var(--accent);
+}
+
+.company-logo {
+  display: flex;
+
+  list-style: none;
+}
+
+.company-logo .item:nth-child(6) {
+  margin-right: 0px;
+}
+
+/* .clients-logo:nth-last-child(6) {
+  margin-right: 0px;
+} */
 
 /* Portfolio */
 
@@ -328,6 +436,8 @@ ul {
   letter-spacing: 0.03em;
   cursor: pointer;
   padding: 6px 22px 6px 22px;
+  border: none;
+  border-radius: 4px;
 }
 
 .item .filter-button {
@@ -336,6 +446,7 @@ ul {
 .filter-button:hover {
   color: var(--primary-background-color);
   background-color: var(--accent);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .filter .current {
@@ -347,6 +458,7 @@ ul {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .portfolio-list {
@@ -357,12 +469,18 @@ ul {
   line-height: 1.87;
   letter-spacing: 0.03em;
   list-style-type: none;
+  cursor: pointer;
 }
 
 .portfolio-list .item {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.portfolio-list .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list .item:nth-last-child(-n + 3) {
@@ -384,8 +502,9 @@ ul {
 }
 
 .border {
-  border: 1px solid var(--border-color);
-
+  border-right: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
   padding: 20px 24px 20px 24px;
 }
 
@@ -444,6 +563,21 @@ ul {
   margin-top: 20px;
 }
 
-.address-block {
-  /* padding-bottom: 60px; */
+/* Social Footer */
+
+.container.social {
+  display: flex;
+  flex-wrap: wrap;
+  width: 206px;
+  height: 80px;
+  margin-left: 80px;
+}
+
+.container .title {
+  font-family: roboto;
+  font-weight: 700;
+  font-size: 14px;
+  font-style: normal;
+  text-transform: uppercase;
+  color: var(--social-footer-color);
 }
