--- a/css/styles.css
+++ b/css/styles.css
@@ -608,7 +608,8 @@ ul {
   justify-content: center;
 }
 
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: var(--accent);
 }
 
