--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,20 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav .link.current::after {
+  position: absolute;
+  width: 100%;
+  content: "";
+  background-color: var(--accent);
+  height: 4px;
+  border: solid 1px var(--accent);
+  bottom: 0%;
+  left: 0%;
+  border-radius: 2px;
 }
 
 .site-nav .link:hover,
@@ -142,6 +156,7 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .envelope-icon {
@@ -223,6 +238,57 @@ ul {
   border-radius: 4px;
 }
 
+/* Backdrop */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 4px;
+  z-index: 2;
+  position: relative;
+}
+
+.modal-close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  position: absolute;
+  right: 14px;
+  top: 14px;
+}
+
+.close-icon {
+  width: 18px;
+  height: 18px;
+}
+
 /* What do we do */
 
 .section-title.work {
@@ -238,10 +304,31 @@ ul {
 .work-list {
   display: flex;
   list-style: none;
+  position: relative;
+  z-index: -1;
 }
 
 .work-list .item {
   margin-right: 30px;
+  position: relative;
+}
+
+.work-list .item p {
+  width: 370px;
+  display: flex;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0px;
 }
 
 .work-list .item:nth-child(3n) {
@@ -390,17 +477,19 @@ ul {
   fill: var(--clients-border);
   cursor: pointer;
   padding: 16px 32px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-logo:hover,
 .clients-logo:focus {
   fill: var(--accent);
   border: 1px solid var(--accent);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company-logo {
   display: flex;
-
   list-style: none;
 }
 
@@ -437,15 +526,20 @@ ul {
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
+  transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item .filter-button {
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
   color: var(--primary-background-color);
   background-color: var(--accent);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter .current {
@@ -475,11 +569,64 @@ ul {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-list .item:hover .portfolio-card-description {
+  transform: translateY(0);
+}
+
+.item-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-card-description {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  color: var(--primary-background-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  height: 100%;
+
+  padding: 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .overlay {
+  width: 370px;
+  height: 404px;
+  position: relative;
+} */
+
+/* .portfolio-thumb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  color: var(--primary-background-color);
+  content: "";
+  position: absolute;
+  top: 0%;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 370px;
+  height: 294px;
+  opacity: 1;
+} */
 
 .portfolio-list .item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list .item:nth-last-child(-n + 3) {
@@ -501,9 +648,9 @@ ul {
 }
 
 .border {
-  border-right: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-right: 0.5px solid var(--border-color);
+  border-left: 0.5px solid var(--border-color);
+  border-bottom: 0.5px solid var(--border-color);
   padding: 20px 24px 20px 24px;
 }
 
@@ -525,6 +672,7 @@ ul {
   letter-spacing: 0.03em;
   text-decoration: none;
   margin-top: 9px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list .item {
@@ -544,6 +692,7 @@ ul {
 .footer .link:focus {
   color: var(--accent);
   padding-top: 9px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list {
@@ -600,6 +749,7 @@ ul {
   margin-right: 10px;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-logo {
@@ -609,6 +759,7 @@ ul {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container.footer {
@@ -628,6 +779,8 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-staff:hover,
@@ -635,14 +788,19 @@ ul {
   background-color: var(--accent);
   border-radius: 50%;
   fill: white;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-staff:hover .social-staff,
 .link-staff:focus .social-staff {
   background-color: var(--accent);
   fill: white;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-staff {
   fill: var(--clients-border);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
