--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,13 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+textarea {
+  resize: none;
+  width: 448px;
+  height: 120px;
+}
+
 /* Utils */
 .container {
   width: 1200px;
@@ -267,6 +274,8 @@ ul {
   border-radius: 4px;
   z-index: 2;
   position: relative;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .modal-close-btn {
@@ -282,11 +291,97 @@ ul {
   position: absolute;
   right: 14px;
   top: 14px;
+  cursor: pointer;
 }
 
 .close-icon {
   width: 18px;
   height: 18px;
+}
+
+.modal-close-btn:hover {
+  fill: var(--accent);
+}
+
+/* Modal window form */
+
+.modal-form {
+  width: 448px;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 40px;
+}
+
+.modal-apeal {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.17;
+  color: rgba(33, 33, 33, 1);
+  margin-bottom: 12px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 10px 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-field label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.14;
+  display: flex;
+  margin-bottom: 4px;
+}
+
+.form-field textarea {
+  padding: 12px 16px 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.14;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.submit-agree label {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 2;
+  color: rgba(117, 117, 117, 1);
+}
+.license {
+  color: var(--accent);
+}
+
+.submit-btn {
+  color: var(--primary-background-color);
+  background-color: var(--accent);
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  padding: 10px 55px 10px 55px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-top: 40px;
+  cursor: pointer;
 }
 
 /* What do we do */
@@ -780,4 +875,59 @@ ul {
 .social-staff {
   fill: var(--clients-border);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Subscribe */
+
+.subscribe {
+  margin-left: 93px;
+}
+
+.subscribe-title {
+  font-family: roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  font-style: normal;
+  text-transform: uppercase;
+  color: var(--social-footer-color);
+  margin-bottom: 20px;
+  padding-top: 0px;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-btn {
+  color: var(--primary-background-color);
+  background-color: var(--accent);
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  padding: 10px 28px 10px 28px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-left: 12px;
+}
+
+.subscribe input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: var(--footer-background-color);
+  border-radius: 4px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 359px;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.14;
+  color: rgba(255, 255, 255, 0.6);
 }
