--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,19 @@ textarea {
   height: 120px;
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 /* Utils */
 .container {
   width: 1200px;
@@ -276,6 +289,7 @@ textarea {
   position: relative;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  padding-top: 40px;
 }
 
 .modal-close-btn {
@@ -292,6 +306,7 @@ textarea {
   right: 14px;
   top: 14px;
   cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-icon {
@@ -299,18 +314,23 @@ textarea {
   height: 18px;
 }
 
-.modal-close-btn:hover {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--accent);
 }
 
 /* Modal window form */
 
 .modal-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 448px;
 
   margin-left: auto;
   margin-right: auto;
-  padding-top: 40px;
 }
 
 .modal-apeal {
@@ -318,35 +338,74 @@ textarea {
   font-size: 20px;
   line-height: 1.17;
   color: rgba(33, 33, 33, 1);
+  text-align: center;
   margin-bottom: 12px;
+  letter-spacing: 0.7px;
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  position: relative;
+}
+
+.form-field:nth-last-child(4) {
+  margin-bottom: 0px;
 }
 
 .form-field input {
   margin: 0;
-  padding: 10px 12px;
+  padding-left: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   cursor: pointer;
+  width: 448px;
+  height: 40px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field label {
-  font-weight: 400;
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field input:focus {
+  border-color: var(--accent);
+}
+
+.form-field input:focus + .input-icon {
+  fill: var(--accent);
+}
+
+.modal-form-label {
+  display: flex;
+  align-items: flex-start;
+  justify-self: left;
   font-size: 12px;
   line-height: 1.14;
   display: flex;
   margin-bottom: 4px;
+  width: 448px;
+}
+
+.modal-form label:nth-child(5n) {
+  margin-bottom: 0px;
 }
 
 .form-field textarea {
   padding: 12px 16px 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment {
+  margin-bottom: 20px;
 }
 
 .form-field textarea::placeholder {
@@ -356,12 +415,36 @@ textarea {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.submit-agree label {
-  font-weight: 400;
+.form-field textarea:focus {
+  border-color: var(--accent);
+}
+
+.modal-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.5px;
   font-size: 14px;
-  line-height: 2;
+  line-height: 1.47;
+
   color: rgba(117, 117, 117, 1);
 }
+
+.modal-form-checkbox-label::before {
+  display: block;
+  content: "";
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  background-image: url(/images/icon/Vector.svg);
+  margin-right: 8px;
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background-image: url(/images/icon/icon\ check.svg);
+}
+
 .license {
   color: var(--accent);
 }
@@ -380,7 +463,7 @@ textarea {
   border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-top: 40px;
+  margin-top: 30px;
   cursor: pointer;
 }
 
@@ -881,6 +964,7 @@ textarea {
 
 .subscribe {
   margin-left: 93px;
+  width: 570px;
 }
 
 .subscribe-title {
@@ -898,6 +982,7 @@ textarea {
 }
 
 .subscribe-btn {
+  display: flex;
   color: var(--primary-background-color);
   background-color: var(--accent);
   font-family: Roboto;
@@ -907,6 +992,8 @@ textarea {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+  width: 200px;
+  height: 50px;
   padding: 10px 28px 10px 28px;
   border: none;
   border-radius: 4px;
@@ -914,7 +1001,24 @@ textarea {
   margin-left: 12px;
 }
 
+.subscribe-block {
+  display: inline-flex;
+  align-items: center;
+}
+
+.subscribe-btn::after {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(/images/icon/icon\ send.svg);
+  content: "";
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+}
+
 .subscribe input {
+  color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: var(--footer-background-color);
   border-radius: 4px;
@@ -924,6 +1028,10 @@ textarea {
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
+/* .subscribe input:focus {
+  border-color: var(--accent);
+} */
 
 .subscribe input::placeholder {
   font-weight: 400;
